[gd_scene load_steps=29 format=3 uid="uid://d1fhv8mn5mf8j"]

[ext_resource type="Script" path="res://UI/Intro/intro.gd" id="1_2ne8y"]
[ext_resource type="Texture2D" uid="uid://dmanqy5db0e6f" path="res://UI/Intro/black-background.png" id="1_f0dog"]
[ext_resource type="Texture2D" uid="uid://bs7bo837bn08l" path="res://UI/Intro/godot-background.png" id="2_wghtd"]
[ext_resource type="Texture2D" uid="uid://ddra21hwtlrc6" path="res://UI/Intro/gameoff-background.png" id="3_hxo6s"]
[ext_resource type="FontFile" uid="uid://bumvrs8w2btcl" path="res://Assets/runescape_uf.ttf" id="5_a8ya5"]
[ext_resource type="Texture2D" uid="uid://cst26gqk2nr12" path="res://UI/Intro/menu-background.png" id="5_tr03e"]
[ext_resource type="Texture2D" uid="uid://ccqscso7hfx0i" path="res://UI/Intro/menu-merlin-title.png" id="7_sfwfl"]
[ext_resource type="Texture2D" uid="uid://bjlkaugfalxx6" path="res://UI/Intro/yellow-square.png" id="8_w8544"]

[sub_resource type="Animation" id="Animation_rbhwv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GodotLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOffLogo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IntroText:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainMenu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4pqc8"]
resource_name = "gameoff-appear"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_appear_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOffLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fader:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hhiut"]
resource_name = "gameoff-appeared"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOffLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6lb2s"]
resource_name = "gameoff-fade"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_fade_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOffLogo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_l8sgj"]
resource_name = "godot-appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GodotLogo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_appear_complete"
}]
}

[sub_resource type="Animation" id="Animation_84t0p"]
resource_name = "godot-appeared"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GodotLogo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d6kvk"]
resource_name = "godot-fade"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_fade_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GodotLogo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_80jlj"]
resource_name = "menu-appear"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_appear_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b1r1w"]
resource_name = "menu-appeared"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rwu68"]
resource_name = "text-appear"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_appear_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fader:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dsa5u"]
resource_name = "text-appeared"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2kqlc"]
resource_name = "text-fade"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_fade_complete"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ifxly"]
_data = {
"RESET": SubResource("Animation_rbhwv"),
"gameoff-appear": SubResource("Animation_4pqc8"),
"gameoff-appeared": SubResource("Animation_hhiut"),
"gameoff-fade": SubResource("Animation_6lb2s"),
"godot-appear": SubResource("Animation_l8sgj"),
"godot-appeared": SubResource("Animation_84t0p"),
"godot-fade": SubResource("Animation_d6kvk"),
"menu-appear": SubResource("Animation_80jlj"),
"menu-appeared": SubResource("Animation_b1r1w"),
"text-appear": SubResource("Animation_rwu68"),
"text-appeared": SubResource("Animation_dsa5u"),
"text-fade": SubResource("Animation_2kqlc")
}

[sub_resource type="Animation" id="Animation_lm78j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.960784, 0.901961, 0.572549, 1)]
}

[sub_resource type="Animation" id="Animation_0m2l5"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.960784, 0.901961, 0.572549, 1), Color(0.866667, 0.654902, 0.478431, 1), Color(0.960784, 0.901961, 0.572549, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2l67"]
_data = {
"RESET": SubResource("Animation_lm78j"),
"idle": SubResource("Animation_0m2l5")
}

[sub_resource type="Animation" id="Animation_yhhr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 283)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_op757"]
resource_name = "credit-roll"
length = 40.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 40),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 283), Vector2(0, -280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d55u3"]
resource_name = "stop-credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Fader:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_stop_credits"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm32e"]
_data = {
"RESET": SubResource("Animation_yhhr4"),
"credit-roll": SubResource("Animation_op757"),
"stop-credits": SubResource("Animation_d55u3")
}

[node name="Intro" type="CanvasLayer"]
script = ExtResource("1_2ne8y")

[node name="BlackBackground" type="TextureRect" parent="."]
texture = ExtResource("1_f0dog")

[node name="GodotLogo" type="TextureRect" parent="."]
visible = false
offset_right = 416.0
offset_bottom = 256.0
texture = ExtResource("2_wghtd")

[node name="GameOffLogo" type="TextureRect" parent="."]
visible = false
texture = ExtResource("3_hxo6s")

[node name="IntroText" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="IntroText"]
layout_mode = 0
offset_right = 416.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("5_a8ya5")
theme_override_font_sizes/font_size = 16
text = "Made from scratch for GameOff Jam 2023.

This game is best played on desktop with a controller!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MainMenu" type="TextureRect" parent="."]
visible = false
texture = ExtResource("5_tr03e")

[node name="TitleLabel" type="TextureRect" parent="MainMenu"]
modulate = Color(0.960784, 0.901961, 0.572549, 1)
layout_mode = 0
offset_left = 83.0
offset_top = 162.0
offset_right = 189.0
offset_bottom = 201.0
texture = ExtResource("7_sfwfl")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 296.0
offset_top = 73.0
offset_right = 352.0
offset_bottom = 184.0

[node name="NewGameLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "New Game"

[node name="ContinueLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Continue"

[node name="OptionsLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Options"

[node name="CreditsLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Credits
"

[node name="QuitLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Quit
"

[node name="SelectionIndicator" type="TextureRect" parent="MainMenu"]
layout_mode = 0
offset_left = 283.0
offset_top = 122.0
offset_right = 291.0
offset_bottom = 130.0
texture = ExtResource("8_w8544")

[node name="Fader" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("1_f0dog")

[node name="IntroAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ifxly")
}

[node name="TitleAnimation" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_a2l67")
}

[node name="CreditsAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CreditsRoll")
libraries = {
"": SubResource("AnimationLibrary_bm32e")
}

[node name="CreditsRoll" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsRoll"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 283.0
offset_right = 416.0
offset_bottom = 690.0

[node name="Label9" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.894118, 0.635294, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Merlin

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Made from scratch for GameOff 2023"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Code, Level Design and Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.894118, 0.635294, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Gad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Art and Animation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.894118, 0.635294, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Momonga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="CreditsRoll/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.647059, 0.490196, 1)
theme_override_fonts/font = ExtResource("5_a8ya5")
text = "Sound effects: freesound.org

Tools used: Aseprite, Godot, Audacity, Famistudio


Please leave us a rating and comment!
We'd love to play your game as well!


Thanks for playing!"
horizontal_alignment = 1
vertical_alignment = 1
